feat(code-generator): :construction: Editor and service connected

--- a/apps/bulldozer-client/src/styles/base.scss
+++ b/apps/bulldozer-client/src/styles/base.scss
@@ -66,5 +66,9 @@ input[readonly] {
 }
 
 .custom-monaco-editor {
-  height: 300px !important;
+  height: calc(100vh - 64px) !important;
+}
+
+.editor-container {
+  height: 100% !important;
 }
