--- a/apps/bulldozer-client/src/styles/base.scss
+++ b/apps/bulldozer-client/src/styles/base.scss
@@ -66,7 +66,11 @@ input[readonly] {
 }
 
 .custom-monaco-editor {
-  height: calc(100vh - 114px) !important;
+  height: calc(100vh - 155px) !important;
+}
+
+.custom-monaco-editor-splited {
+  height: calc(50vh - 77px) !important;
 }
 
 .editor-container {
