feat(code-generator): more format to generate instructions code added

--- a/apps/bulldozer-client/src/styles/base.scss
+++ b/apps/bulldozer-client/src/styles/base.scss
@@ -73,6 +73,10 @@ input[readonly] {
   height: calc(50vh - 77px) !important;
 }
 
+.bd-border-bottom {
+  border-bottom: 2px solid gray;
+}
+
 .editor-container {
   height: 100% !important;
 }
