--- a/apps/bulldozer-client/src/styles/material.scss
+++ b/apps/bulldozer-client/src/styles/material.scss
@@ -2,6 +2,7 @@
 @use '~@angular/cdk';
 
 @import './themes/default-themes.scss';
+//@import './themes/alternative-theme.scss';
 @import '~@angular/material/theming';
 
 @import 'https://fonts.googleapis.com/css?family=Material+Icons';
@@ -129,12 +130,15 @@ mat-icon {
 }
 
 .darkMode {
+  // .bd-custom-keyboard-focus.cdk-keyboard-focused {
   *.cdk-keyboard-focused {
-    background-color: rgba(250, 250, 250, 0.42) !important;
+    box-shadow: 0px 3px 5px -1px rgb(255 255 255 / 20%),
+      0px 6px 10px 0px rgb(255 255 255 / 14%),
+      0px 1px 18px 0px rgb(255 255 255 / 12%) !important;
   }
 
-  .mat-accent.mat-button-disabled {
-    color: black !important;
+  .bd-custom-color .mat-accent.mat-button-disabled {
+    color: #444444 !important;
     background-color: rgba(250, 250, 250, 0.42) !important;
   }
 }
