--- a/apps/bulldozer-client/src/styles/material.scss
+++ b/apps/bulldozer-client/src/styles/material.scss
@@ -130,8 +130,15 @@ mat-icon {
 }
 
 .darkMode {
-  // .bd-custom-keyboard-focus.cdk-keyboard-focused {
-  *.cdk-keyboard-focused {
+  .bd-custom-keyboard-focus.cdk-keyboard-focused {
+    *.cdk-keyboard-focused {
+      box-shadow: 0px 3px 5px -1px rgb(255 255 255 / 20%),
+        0px 6px 10px 0px rgb(255 255 255 / 14%),
+        0px 1px 18px 0px rgb(255 255 255 / 12%) !important;
+    }
+  }
+  button.mat-primary.cdk-keyboard-focused,
+  button.mat-accent.cdk-keyboard-focused {
     box-shadow: 0px 3px 5px -1px rgb(255 255 255 / 20%),
       0px 6px 10px 0px rgb(255 255 255 / 14%),
       0px 1px 18px 0px rgb(255 255 255 / 12%) !important;
