--- a/apps/bulldozer-client/src/styles/material.scss
+++ b/apps/bulldozer-client/src/styles/material.scss
@@ -1,4 +1,5 @@
 @use '~@angular/material' as mat;
+@use '~@angular/cdk';
 
 @import './themes/default-themes.scss';
 @import '~@angular/material/theming';
@@ -125,4 +126,25 @@ mat-icon {
   padding-left: 1rem;
   text-align: left;
   height: 100%;
+}
+
+.mat-fab.cdk-keyboard-focused,
+.mat-mini-fab.cdk-keyboard-focused {
+  transform: scale(1.5);
+  box-shadow: 0px 3px 5px -1px rgb(0 0 0 / 20%),
+    0px 6px 10px 0px rgb(0 0 0 / 14%), 0px 1px 18px 0px rgb(0 0 0 / 12%) !important;
+}
+
+.darkMode {
+  .mat-fab.cdk-keyboard-focused,
+  .mat-mini-fab.cdk-keyboard-focused {
+    box-shadow: 0px 3px 5px -1px rgb(255 255 255 / 20%),
+      0px 6px 10px 0px rgb(255 255 255 / 14%),
+      0px 1px 18px 0px rgb(255 255 255 / 12%) !important;
+  }
+
+  .bd-custom-color .mat-accent.mat-button-disabled {
+    color: #444444 !important;
+    background-color: rgba(250, 250, 250, 0.42) !important;
+  }
 }
