--- a/apps/bulldozer-client/src/styles/material.scss
+++ b/apps/bulldozer-client/src/styles/material.scss
@@ -1,8 +1,8 @@
 @use '@angular/material' as mat;
 @use '@angular/cdk';
-
 @use './components/custom-containers.scss' as containers;
 
+@import './constants/sizes.scss';
 @import './themes/default-themes.scss';
 @import '@angular/material/theming';
 
@@ -139,6 +139,14 @@ mat-icon {
   transform: scale(1.5);
   box-shadow: 0px 3px 5px -1px rgb(0 0 0 / 20%),
     0px 6px 10px 0px rgb(0 0 0 / 14%), 0px 1px 18px 0px rgb(0 0 0 / 12%) !important;
+}
+
+.mat-tab-links {
+  height: $tabs-height;
+}
+
+.mat-tab-link {
+  height: $tabs-height !important;
 }
 
 .darkMode {
