--- a/apps/bulldozer-client/src/styles/base.scss
+++ b/apps/bulldozer-client/src/styles/base.scss
@@ -1,11 +1,7 @@
-// utilities
-$success-bgcolor: #059669;
-$warning-bgcolor: #fbbf24;
-$error-bgcolor: #dc2626;
+@import './constants/colors.scss';
+@import './constants/sizes.scss';
 
-$white-text-color: white;
-$black-text-color: black;
-
+// utilities (TO DO: move to antoher folder)
 @mixin snackbar-span {
   display: block;
   font-size: 1.125rem;
@@ -65,6 +61,14 @@ input[readonly] {
   pointer-events: none;
 }
 
+.bd-h-inherit {
+  height: inherit !important;
+}
+
+.bd-custom-top-toolbar {
+  top: $toolbar-height !important;
+}
+
 .bd-custom-monaco-editor {
   height: calc(100vh - 96px) !important;
 }
@@ -79,6 +83,12 @@ input[readonly] {
 
 .bd-custom-height-layout {
   height: calc(
-    100vh - 113px
+    100vh - $toolbar-height
+  ); // 64 (toolbar size) + 48(tabss toolbar) + 1(extra pixel ?)
+}
+
+.bd-custom-height-content {
+  height: calc(
+    100vh - $toolbar-height - $tabs-height - 1px
   ); // 64 (toolbar size) + 48(tabss toolbar) + 1(extra pixel ?)
 }
