--- a/apps/bulldozer-client/src/styles/base.scss
+++ b/apps/bulldozer-client/src/styles/base.scss
@@ -117,7 +117,15 @@ input[readonly] {
   background-color: #2c2c2c;
 }
 
+.bd-bg-image-1,
+.bd-bg-image-2 {
+  background-size: cover;
+}
+
 .bd-bg-image-1 {
   background-image: url('../assets/images/backgrounds/workspace.png');
-  background-size: cover;
+}
+
+.bd-bg-image-2 {
+  background-image: url('../assets/images/backgrounds/budget.png');
 }
