chore(bulldozer-client): textures background images added

--- a/apps/bulldozer-client/src/styles/base.scss
+++ b/apps/bulldozer-client/src/styles/base.scss
@@ -129,3 +129,11 @@ input[readonly] {
 .bd-bg-image-2 {
   background-image: url('../assets/images/backgrounds/budget.png');
 }
+
+.bd-bg-image-3 {
+  background-image: url('../assets/images/backgrounds/attributes.png');
+}
+
+.bd-bg-image-4 {
+  background-image: url('../assets/images/backgrounds/arguments.png');
+}
