refactor(bulldozer-client): attribute cards design improved

--- a/apps/bulldozer-client/src/styles/base.scss
+++ b/apps/bulldozer-client/src/styles/base.scss
@@ -118,7 +118,9 @@ input[readonly] {
 }
 
 .bd-bg-image-1,
-.bd-bg-image-2 {
+.bd-bg-image-2,
+.bd-bg-image-3,
+.bd-bg-image-4 {
   background-size: cover;
 }
 
