--- a/apps/bulldozer-client/src/styles/base.scss
+++ b/apps/bulldozer-client/src/styles/base.scss
@@ -120,7 +120,9 @@ input[readonly] {
 .bd-bg-image-1,
 .bd-bg-image-2,
 .bd-bg-image-3,
-.bd-bg-image-4 {
+.bd-bg-image-4,
+.bd-bg-image-5,
+.bd-bg-image-6 {
   background-size: cover;
 }
 
@@ -138,4 +140,12 @@ input[readonly] {
 
 .bd-bg-image-4 {
   background-image: url('../assets/images/backgrounds/arguments.png');
+}
+
+.bd-bg-image-5 {
+  background-image: url('../assets/images/backgrounds/documents.png');
+}
+
+.bd-bg-image-6 {
+  background-image: url('../assets/images/backgrounds/signers.png');
 }
