--- a/apps/bulldozer-client/src/styles/material.scss
+++ b/apps/bulldozer-client/src/styles/material.scss
@@ -20,7 +20,7 @@ $darkTheme: set-dark-theme($theme-primary, $theme-accent, $theme-warn);
 // end
 
 .hd-border-gray {
-  border-color: #2c2c2c !important;
+  border-color: #242424 !important;
 }
 
 .hd-highlight-title {
