--- a/apps/bulldozer-client/src/styles/base.scss
+++ b/apps/bulldozer-client/src/styles/base.scss
@@ -120,7 +120,8 @@ input[readonly] {
 .bd-bg-image-4,
 .bd-bg-image-5,
 .bd-bg-image-6,
-.bd-bg-image-7 {
+.bd-bg-image-7,
+.bd-bg-image-8 {
   background-size: cover;
 }
 
@@ -152,6 +153,10 @@ input[readonly] {
   background-image: url('../assets/images/backgrounds/wood.png');
 }
 
+.bd-bg-image-8 {
+  background-image: url('../assets/images/backgrounds/wood_sign.png');
+}
+
 .bd-bg-image-7 > .mat-dialog-container {
   background: transparent !important;
 }
@@ -162,4 +167,20 @@ input[readonly] {
 
 .bd-bg-black-transparent-60 {
   background-color: rgba(30, 30, 30, 0.6);
+}
+
+.bd-top-2 {
+  top: 2px;
+}
+
+.bd-box-shadow-bg-red {
+  box-shadow: 0px 0px 20px 3px red;
+}
+
+.bd-box-shadow-bg-yellow {
+  box-shadow: 0px 0px 20px 3px yellow;
+}
+
+.bd-box-shadow-bg-green {
+  box-shadow: 0px 0px 20px 3px green;
 }
