--- a/apps/bulldozer-client/src/styles/base.scss
+++ b/apps/bulldozer-client/src/styles/base.scss
@@ -121,7 +121,8 @@ input[readonly] {
 .bd-bg-image-5,
 .bd-bg-image-6,
 .bd-bg-image-7,
-.bd-bg-image-8 {
+.bd-bg-image-8,
+.bd-bg-image-9 {
   background-size: cover;
 }
 
@@ -155,6 +156,10 @@ input[readonly] {
 
 .bd-bg-image-8 {
   background-image: url('../assets/images/backgrounds/wood_sign.png');
+}
+
+.bd-bg-image-9 {
+  background-image: url('../assets/images/backgrounds/user_profile.png');
 }
 
 .bd-bg-image-7 > .mat-dialog-container {
