refactor(bulldozer-client): tabs design updated

--- a/apps/bulldozer-client/src/styles/base.scss
+++ b/apps/bulldozer-client/src/styles/base.scss
@@ -122,7 +122,8 @@ input[readonly] {
 .bd-bg-image-6,
 .bd-bg-image-7,
 .bd-bg-image-8,
-.bd-bg-image-9 {
+.bd-bg-image-9,
+.bd-bg-image-10 {
   background-size: cover;
 }
 
@@ -160,6 +161,10 @@ input[readonly] {
 
 .bd-bg-image-9 {
   background-image: url('../assets/images/backgrounds/user_profile.png');
+}
+
+.bd-bg-image-10 {
+  background-image: url('../assets/images/backgrounds/tabs.png');
 }
 
 .bd-bg-image-7 > .mat-dialog-container {
