fix(bulldozer-client): added missing attribute on image class

--- a/apps/bulldozer-client/src/styles/base.scss
+++ b/apps/bulldozer-client/src/styles/base.scss
@@ -123,7 +123,8 @@ input[readonly] {
 .bd-bg-image-7,
 .bd-bg-image-8,
 .bd-bg-image-9,
-.bd-bg-image-10 {
+.bd-bg-image-10,
+.bd-bg-image-11 {
   background-size: cover;
 }
 
