--- a/apps/bulldozer-client/src/styles/material.scss
+++ b/apps/bulldozer-client/src/styles/material.scss
@@ -177,3 +177,8 @@ mat-icon {
   background-color: transparent !important;
   box-shadow: none !important;
 }
+
+.mat-expansion-panel {
+  background-color: transparent !important;
+  box-shadow: none !important;
+}
