--- a/apps/bulldozer-client/src/styles/material.scss
+++ b/apps/bulldozer-client/src/styles/material.scss
@@ -1,13 +1,9 @@
 @use '@angular/material' as mat;
 @use '@angular/cdk';
-@use './components/custom-containers.scss' as containers;
 
-@import './constants/sizes.scss';
 @import './themes/default-themes.scss';
+@import './constants/fonts.scss';
 @import '@angular/material/theming';
-
-@import 'https://fonts.googleapis.com/css?family=Material+Icons';
-@import url('https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;400&display=swap');
 
 @include mat.core($fontConfig);
 
@@ -15,8 +11,6 @@ $darkTheme: set-dark-theme($theme-primary, $theme-accent, $theme-warn);
 
 // Theme Init
 @include angular-material-theme($darkTheme);
-// set custom themes
-@include containers.theme($darkTheme);
 // end
 
 .hd-border-gray {
@@ -176,6 +170,10 @@ mat-icon {
   padding: 0 !important;
   background-color: transparent !important;
   box-shadow: none !important;
+}
+
+.mat-tab-link-container {
+  padding: 5px;
 }
 
 .mat-expansion-panel {
