--- a/apps/bulldozer-client/src/styles/material.scss
+++ b/apps/bulldozer-client/src/styles/material.scss
@@ -1,9 +1,9 @@
 @use '@angular/material' as mat;
 @use '@angular/cdk';
+@import '@angular/material/theming';
 
 @import './themes/default-themes.scss';
-@import './constants/fonts.scss';
-@import '@angular/material/theming';
+@import './core/fonts.scss';
 
 @include mat.core($fontConfig);
 
@@ -155,6 +155,10 @@ mat-icon {
   height: 100vh;
 }
 
+.mat-dialog-container {
+  background: transparent !important;
+}
+
 .mat-tab-header {
   border-color: transparent !important;
 }
@@ -174,6 +178,13 @@ mat-icon {
 
 .mat-tab-link-container {
   padding: 5px;
+}
+
+.mat-tab-link-container .mat-ink-bar {
+  background-color: white !important;
+  height: 1px !important;
+  opacity: 0.3 !important;
+  box-shadow: 0px 0px 5px 1px white;
 }
 
 .mat-expansion-panel {
