--- a/apps/bulldozer-client/src/styles/material.scss
+++ b/apps/bulldozer-client/src/styles/material.scss
@@ -126,25 +126,11 @@ mat-icon {
   max-width: unset !important;
 }
 
-.mat-fab.cdk-keyboard-focused,
-.mat-mini-fab.cdk-keyboard-focused {
-  transform: scale(1.5);
-  box-shadow: 0px 3px 5px -1px rgb(0 0 0 / 20%),
-    0px 6px 10px 0px rgb(0 0 0 / 14%), 0px 1px 18px 0px rgb(0 0 0 / 12%) !important;
-}
-
 .mat-tab-link {
   height: auto !important;
 }
 
 .darkMode {
-  .mat-fab.cdk-keyboard-focused,
-  .mat-mini-fab.cdk-keyboard-focused {
-    box-shadow: 0px 3px 5px -1px rgb(255 255 255 / 20%),
-      0px 6px 10px 0px rgb(255 255 255 / 14%),
-      0px 1px 18px 0px rgb(255 255 255 / 12%) !important;
-  }
-
   .bd-custom-color .mat-accent.mat-button-disabled {
     color: #444444 !important;
     background-color: rgba(250, 250, 250, 0.42) !important;
@@ -178,6 +164,10 @@ mat-icon {
 
 .mat-tab-link-container {
   padding: 5px;
+}
+
+.mat-tab-link-container .mat-tab-link {
+  height: 40px !important;
 }
 
 .mat-tab-link-container .mat-ink-bar {
