--- a/apps/bulldozer-client/src/styles/base.scss
+++ b/apps/bulldozer-client/src/styles/base.scss
@@ -122,3 +122,12 @@ input[readonly] {
 .bd-button:active {
   background-image: linear-gradient(#262626, #303030);
 }
+
+.bd-button[disabled='disabled'],
+.bd-button:disabled {
+  cursor: not-allowed;
+  background-image: linear-gradient(gray, gray) !important;
+  color: #e6e6e6;
+  border: 1px solid lightgrey;
+  opacity: 0.4;
+}
