--- a/apps/bulldozer-client/src/styles/core/backgrounds.scss
+++ b/apps/bulldozer-client/src/styles/core/backgrounds.scss
@@ -1,14 +1,6 @@
-.bd-bg-image-1,
-.bd-bg-image-2,
-.bd-bg-image-3,
-.bd-bg-image-4,
-.bd-bg-image-5,
-.bd-bg-image-6,
-.bd-bg-image-7,
 .bd-bg-image-8,
-.bd-bg-image-9,
 .bd-bg-image-10,
-.bd-bg-image-11,
+.bd-bg-metal-2,
 .bd-bg-image-12,
 .bd-bg-image-13,
 .bd-bg-image-14,
@@ -16,66 +8,44 @@
   background-size: cover;
 }
 
-.bd-bg-image-0 {
-  background-image: url('../../assets/images/backgrounds/bricks.png');
+.bd-bg-wood,
+.bd-bg-bricks,
+.bd-bg-metal {
+  background-repeat: repeat !important;
 }
 
-.bd-bg-image-1 {
-  background-image: url('../../assets/images/backgrounds/workspace.png');
+.bd-bg-metal {
+  background-image: url('../../assets/images/backgrounds/metal.png');
 }
 
-.bd-bg-image-2 {
-  background-image: url('../../assets/images/backgrounds/budget.png');
+.bd-bg-metal-2 {
+  background-image: url('../../assets/images/backgrounds/metal-2.webp');
 }
 
-.bd-bg-image-3 {
-  background-image: url('../../assets/images/backgrounds/attributes.png');
+.bd-bg-bricks {
+  background-image: url('../../assets/images/backgrounds/bricks.webp');
 }
 
-.bd-bg-image-4 {
-  background-image: url('../../assets/images/backgrounds/arguments.png');
-}
-
-.bd-bg-image-5 {
-  background-image: url('../../assets/images/backgrounds/documents.png');
-}
-
-.bd-bg-image-6 {
-  background-image: url('../../assets/images/backgrounds/signers.png');
-}
-
-.bd-bg-image-7 {
-  background-image: url('../../assets/images/backgrounds/wood.png');
+.bd-bg-wood {
+  background-image: url('../../assets/images/backgrounds/wood.webp');
 }
 
 .bd-bg-image-8 {
-  background-image: url('../../assets/images/backgrounds/wood_sign.png');
-}
-
-.bd-bg-image-9 {
-  background-image: url('../../assets/images/backgrounds/user_profile.png');
+  background-image: url('../../assets/images/backgrounds/wood_sign.webp');
 }
 
 .bd-bg-image-10 {
   background-image: url('../../assets/images/backgrounds/tabs.png');
 }
 
-.bd-bg-image-11 {
-  background-image: url('../../assets/images/backgrounds/button_base.png');
-}
-
 .bd-bg-image-12 {
-  background-image: url('../../assets/images/backgrounds/sidebar.png');
+  background-image: url('../../assets/images/backgrounds/sidebar.webp');
 }
 
 .bd-bg-image-13 {
-  background-image: url('../../assets/images/backgrounds/list_element.png');
-}
-
-.bd-bg-image-14 {
-  background-image: url('../../assets/images/backgrounds/code.png');
+  background-image: url('../../assets/images/backgrounds/list_element.webp');
 }
 
 .bd-bg-image-15 {
-  background-image: url('../../assets/images/backgrounds/bulldozer.png');
+  background-image: url('../../assets/images/backgrounds/bulldozer.webp');
 }
