--- a/apps/bulldozer-client/src/styles/core/fonts.scss
+++ b/apps/bulldozer-client/src/styles/core/fonts.scss
@@ -1,9 +1,13 @@
-@import 'https://fonts.googleapis.com/css?family=Material+Icons';
+@import 'https://fonts.googleapis.com/css?family=Material+Icons&display=swap';
 @import url('https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;400&display=swap');
 
 @font-face {
   font-family: 'CaptureIt';
-  src: url('../../assets/fonts/CaptureIt.ttf');
+  src: local('../../assets/fonts/CaptureIt.ttf'),
+    local('../../assets/fonts/CaptureIt.ttf'),
+    url(https://bulldozer-next-two.heavyduty.builders/assets/fonts/CaptureIt.ttf)
+      format('woff2');
+  font-display: swap;
 }
 
 .bd-font {
