fix(bulldozer-client): use the proper url for fonts

--- a/apps/bulldozer-client/src/styles/core/fonts.scss
+++ b/apps/bulldozer-client/src/styles/core/fonts.scss
@@ -5,7 +5,7 @@
   font-family: 'CaptureIt';
   src: local('../../assets/fonts/CaptureIt.ttf'),
     local('../../assets/fonts/CaptureIt.ttf'),
-    url(https://bulldozer-next-two.heavyduty.builders/assets/fonts/CaptureIt.ttf)
+    url(https://bulldozer.heavyduty.builders/assets/fonts/CaptureIt.ttf)
       format('woff2');
   font-display: swap;
 }
