--- a/apps/bulldozer-client/src/styles/core/backgrounds.scss
+++ b/apps/bulldozer-client/src/styles/core/backgrounds.scss
@@ -1,10 +1,9 @@
 .bd-bg-image-8,
-.bd-bg-image-10,
 .bd-bg-metal-2,
-.bd-bg-image-12,
-.bd-bg-image-13,
-.bd-bg-image-14,
-.bd-bg-image-15 {
+.bd-bg-stone-3,
+.bd-bg-stone-2,
+.bd-bg-stone,
+.bd-bg-bulldozer {
   background-size: cover;
 }
 
@@ -30,22 +29,22 @@
   background-image: url('../../assets/images/backgrounds/wood.webp');
 }
 
-.bd-bg-image-8 {
-  background-image: url('../../assets/images/backgrounds/wood_sign.webp');
-}
-
-.bd-bg-image-10 {
-  background-image: url('../../assets/images/backgrounds/tabs.png');
-}
-
-.bd-bg-image-12 {
+.bd-bg-stone {
   background-image: url('../../assets/images/backgrounds/sidebar.webp');
 }
 
-.bd-bg-image-13 {
+.bd-bg-stone-2 {
   background-image: url('../../assets/images/backgrounds/list_element.webp');
 }
 
-.bd-bg-image-15 {
+.bd-bg-stone-3 {
+  background-image: url('../../assets/images/backgrounds/tabs.png');
+}
+
+.bd-bg-bulldozer {
   background-image: url('../../assets/images/backgrounds/bulldozer.webp');
+}
+
+.bd-bg-image-8 {
+  background-image: url('../../assets/images/backgrounds/wood_sign.webp');
 }
