--- a/apps/drill-web-client/src/styles.scss
+++ b/apps/drill-web-client/src/styles.scss
@@ -2,4 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 
+@import './styles/base.scss';
+
 /* You can add global styles to this file, and also import other style files */
