--- a/apps/drill-web-client/src/styles/core/backgrounds.scss
+++ b/apps/drill-web-client/src/styles/core/backgrounds.scss
@@ -9,8 +9,13 @@
 
 .bp-bg-wood,
 .bp-bg-bricks,
-.bp-bg-metal {
+.bp-bg-metal,
+.bp-bg-concrete {
 	background-repeat: repeat !important;
+}
+
+.bp-bg-concrete {
+	background-image: url('../../assets/images/backgrounds/concrete.png');
 }
 
 .bp-bg-metal {
