--- a/apps/bulldozer-client/src/styles.scss
+++ b/apps/bulldozer-client/src/styles.scss
@@ -1,5 +1,5 @@
-@import 'tailwindcss/base';
-@import 'tailwindcss/components';
-@import 'tailwindcss/utilities';
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 @import './styles/material.scss';
 @import './styles/base.scss';
