feat(drill): add visual notifications

--- a/apps/drill-web-client/src/styles.scss
+++ b/apps/drill-web-client/src/styles.scss
@@ -3,5 +3,6 @@
 @tailwind utilities;
 
 @import './styles/base.scss';
+@import './styles/material.scss';
 
 /* You can add global styles to this file, and also import other style files */
