fix: github starter web client images updated

--- a/apps/drill-github-app/src/views/import.handlebars
+++ b/apps/drill-github-app/src/views/import.handlebars
@@ -19,7 +19,7 @@
 
 	<style>
 		.bp-bg-bricks { background-image:
-		url(https://drill.heavyduty.builders/bricks.10eeefe04eda7b60.webp);
+		url(https://bulldozer.heavyduty.builders/bricks.10eeefe04eda7b60.webp);
 		background-repeat: repeat !important; } .bp-color-white { color:
 		#e6e6e6!important; }
 	</style>
