--- a/apps/drill-github-app/src/views/setup.handlebars
+++ b/apps/drill-github-app/src/views/setup.handlebars
@@ -18,10 +18,10 @@
 
 	<style>
 		.bp-bg-bricks { background-image:
-		url(https://drill.heavyduty.builders/bricks.10eeefe04eda7b60.webp);
+		url(https://bulldozer.heavyduty.builders/bricks.10eeefe04eda7b60.webp);
 		background-repeat: repeat !important; } .bp-color-white { color:
 		#e6e6e6!important; } .bp-bg-metal { background-image:
-		url(https://drill.heavyduty.builders/metal.c597070156772819.png);
+		url(https://bulldozer.heavyduty.builders/metal.c597070156772819.png);
 		background-repeat: repeat!important; padding: 1rem; background-color:
 		#121212;} a { color: #E69400; }
 	</style>
