refactor: replace bd suffix with bp (blueprint)

--- a/apps/bulldozer-client/src/styles/core/backgrounds.scss
+++ b/apps/bulldozer-client/src/styles/core/backgrounds.scss
@@ -1,27 +1,27 @@
-.bd-bg-image-8,
-.bd-bg-metal-2,
-.bd-bg-stone-3,
-.bd-bg-stone-2,
-.bd-bg-stone,
-.bd-bg-bulldozer {
+.bp-bg-image-8,
+.bp-bg-metal-2,
+.bp-bg-stone-3,
+.bp-bg-stone-2,
+.bp-bg-stone,
+.bp-bg-bulldozer {
 	background-size: cover;
 }
 
 .bp-bg-wood,
-.bd-bg-bricks,
-.bd-bg-metal {
+.bp-bg-bricks,
+.bp-bg-metal {
 	background-repeat: repeat !important;
 }
 
-.bd-bg-metal {
+.bp-bg-metal {
 	background-image: url('../../assets/images/backgrounds/metal.png');
 }
 
-.bd-bg-metal-2 {
+.bp-bg-metal-2 {
 	background-image: url('../../assets/images/backgrounds/metal-2.webp');
 }
 
-.bd-bg-bricks {
+.bp-bg-bricks {
 	background-image: url('../../assets/images/backgrounds/bricks.webp');
 }
 
@@ -29,22 +29,22 @@
 	background-image: url('../../assets/images/backgrounds/wood.webp');
 }
 
-.bd-bg-stone {
+.bp-bg-stone {
 	background-image: url('../../assets/images/backgrounds/sidebar.webp');
 }
 
-.bd-bg-stone-2 {
+.bp-bg-stone-2 {
 	background-image: url('../../assets/images/backgrounds/list_element.webp');
 }
 
-.bd-bg-stone-3 {
+.bp-bg-stone-3 {
 	background-image: url('../../assets/images/backgrounds/tabs.png');
 }
 
-.bd-bg-bulldozer {
+.bp-bg-bulldozer {
 	background-image: url('../../assets/images/backgrounds/bulldozer.webp');
 }
 
-.bd-bg-image-8 {
+.bp-bg-image-8 {
 	background-image: url('../../assets/images/backgrounds/wood_sign.webp');
 }
