--- a/apps/crane-web-client/src/styles/core/backgrounds.scss
+++ b/apps/crane-web-client/src/styles/core/backgrounds.scss
@@ -9,13 +9,8 @@
 
 .bp-bg-wood,
 .bp-bg-bricks,
-.bp-bg-metal,
-.bp-bg-concrete {
+.bp-bg-metal {
 	background-repeat: repeat !important;
-}
-
-.bp-bg-concrete {
-	background-image: url('../../assets/images/backgrounds/concrete.png');
 }
 
 .bp-bg-metal {
