--- a/apps/bulldozer-client/src/styles/material.scss
+++ b/apps/bulldozer-client/src/styles/material.scss
@@ -14,11 +14,11 @@ $darkTheme: set-dark-theme($theme-primary, $theme-accent, $theme-warn);
 // end
 
 .hd-border-gray {
-  border-color: #242424 !important;
+	border-color: #242424 !important;
 }
 
 .hd-highlight-title {
-  color: #fba807;
+	color: #fba807;
 }
 
 // Specific component overrides, pieces that are not in line with the general theming
@@ -27,23 +27,23 @@ $darkTheme: set-dark-theme($theme-primary, $theme-accent, $theme-warn);
 .mat-raised-button,
 .mat-stroked-button,
 .mat-flat-button {
-  padding: 0 1.15em;
-  margin: 0 0.65em;
-  min-width: 3em;
-  line-height: 36.4px;
+	padding: 0 1.15em;
+	margin: 0 0.65em;
+	min-width: 3em;
+	line-height: 36.4px;
 }
 
 .mat-standard-chip {
-  padding: 0.5em 0.85em;
-  min-height: 2.5em;
+	padding: 0.5em 0.85em;
+	min-height: 2.5em;
 }
 
 .material-icons {
-  font-size: 24px;
-  font-family: 'Material Icons', 'Material Icons';
-  .mat-badge-content {
-    font-family: 'Roboto';
-  }
+	font-size: 24px;
+	font-family: 'Material Icons', 'Material Icons';
+	.mat-badge-content {
+		font-family: 'Roboto';
+	}
 }
 
 // Custom
@@ -51,133 +51,133 @@ $darkTheme: set-dark-theme($theme-primary, $theme-accent, $theme-warn);
 .mat-raised-button,
 .mat-stroked-button,
 .mat-flat-button {
-  padding: 0 1.15em;
-  margin: 0 0.65em;
-  min-width: 3em;
-  line-height: 36.4px;
+	padding: 0 1.15em;
+	margin: 0 0.65em;
+	min-width: 3em;
+	line-height: 36.4px;
 }
 
 .mat-standard-chip {
-  padding: 0.5em 0.85em;
-  min-height: 2.5em;
+	padding: 0.5em 0.85em;
+	min-height: 2.5em;
 }
 
 .material-icons {
-  font-size: 24px;
-  font-family: 'Material Icons', 'Material Icons';
-  .mat-badge-content {
-    font-family: 'Roboto';
-  }
+	font-size: 24px;
+	font-family: 'Material Icons', 'Material Icons';
+	.mat-badge-content {
+		font-family: 'Roboto';
+	}
 }
 
 mat-icon {
-  vertical-align: middle;
+	vertical-align: middle;
 }
 
 .mat-form-field {
-  margin-bottom: 0.5rem;
+	margin-bottom: 0.5rem;
 }
 
 .mat-form-field-wrapper {
-  margin-bottom: -1.25em;
+	margin-bottom: -1.25em;
 }
 
 .mat-sidenav {
-  .mat-nav-list {
-    padding: 0 !important;
+	.mat-nav-list {
+		padding: 0 !important;
 
-    .mat-list-item-content {
-      padding: 0 !important;
+		.mat-list-item-content {
+			padding: 0 !important;
 
-      .mat-list-text {
-        height: 100%;
+			.mat-list-text {
+				height: 100%;
 
-        .mat-line {
-          padding-left: 1rem;
-          height: 100%;
-          display: flex;
-          align-items: center;
-        }
-      }
-    }
-  }
+				.mat-line {
+					padding-left: 1rem;
+					height: 100%;
+					display: flex;
+					align-items: center;
+				}
+			}
+		}
+	}
 
-  .mat-expansion-panel-body {
-    padding: 0;
-  }
+	.mat-expansion-panel-body {
+		padding: 0;
+	}
 
-  .mat-expansion-panel {
-    border-radius: 0 !important;
-  }
+	.mat-expansion-panel {
+		border-radius: 0 !important;
+	}
 
-  .mat-expansion-panel-header {
-    height: 3rem !important;
+	.mat-expansion-panel-header {
+		height: 3rem !important;
 
-    .mat-expanded {
-      height: 3rem !important;
-    }
-  }
+		.mat-expanded {
+			height: 3rem !important;
+		}
+	}
 }
 .mat-list-base {
-  padding: 0 !important;
+	padding: 0 !important;
 }
 
 .mat-menu-panel {
-  max-width: unset !important;
+	max-width: unset !important;
 }
 
 .mat-tab-link {
-  height: auto !important;
+	height: auto !important;
 }
 
 .darkMode {
-  .bd-custom-color .mat-accent.mat-button-disabled {
-    color: #444444 !important;
-    background-color: rgba(250, 250, 250, 0.42) !important;
-  }
+	.bp-custom-color .mat-accent.mat-button-disabled {
+		color: #444444 !important;
+		background-color: rgba(250, 250, 250, 0.42) !important;
+	}
 }
 
 .mat-drawer-container {
-  height: 100vh;
+	height: 100vh;
 }
 
 .mat-dialog-container {
-  background: transparent !important;
+	background: transparent !important;
 }
 
 .mat-tab-header {
-  border-color: transparent !important;
+	border-color: transparent !important;
 }
 
 .mat-drawer-backdrop.mat-drawer-shown {
-  background-color: rgba(30, 30, 30, 0.7);
+	background-color: rgba(30, 30, 30, 0.7);
 }
 
 .mat-snack-bar-container {
-  display: flex !important;
-  justify-content: center !important;
-  margin: 0 !important;
-  padding: 0 !important;
-  background-color: transparent !important;
-  box-shadow: none !important;
+	display: flex !important;
+	justify-content: center !important;
+	margin: 0 !important;
+	padding: 0 !important;
+	background-color: transparent !important;
+	box-shadow: none !important;
 }
 
 .mat-tab-link-container {
-  padding: 5px;
+	padding: 5px;
 }
 
 .mat-tab-link-container .mat-tab-link {
-  height: 40px !important;
+	height: 40px !important;
 }
 
 .mat-tab-link-container .mat-ink-bar {
-  background-color: white !important;
-  height: 1px !important;
-  opacity: 0.3 !important;
-  box-shadow: 0px 0px 5px 1px white;
+	background-color: white !important;
+	height: 1px !important;
+	opacity: 0.3 !important;
+	box-shadow: 0px 0px 5px 1px white;
 }
 
 .mat-expansion-panel {
-  background-color: transparent !important;
-  box-shadow: none !important;
+	background-color: transparent !important;
+	box-shadow: none !important;
 }
