--- a/apps/crane-web-client/src/styles/core/fonts.scss
+++ b/apps/crane-web-client/src/styles/core/fonts.scss
@@ -1,3 +1,4 @@
+@import 'https://fonts.googleapis.com/css?family=Material+Icons&display=swap';
 @import url('https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;400&display=swap');
 
 @font-face {
