--- a/apps/crane-web-client/src/styles/material.scss
+++ b/apps/crane-web-client/src/styles/material.scss
@@ -3,8 +3,147 @@
 @import '@angular/material/theming';
 
 @import './themes/default-themes.scss';
+@import './core/fonts.scss';
 
 @include mat.core($fontConfig);
+
+$darkTheme: set-dark-theme($theme-primary, $theme-accent, $theme-warn);
+
+// Theme Init
+@include angular-material-theme($darkTheme);
+// end
+
+// Specific component overrides, pieces that are not in line with the general theming
+
+// Handle buttons appropriately, with respect to line-height
+.mat-raised-button,
+.mat-stroked-button,
+.mat-flat-button {
+	padding: 0 1.15em;
+	margin: 0 0.65em;
+	min-width: 3em;
+	line-height: 36.4px;
+}
+
+.mat-standard-chip {
+	padding: 0.5em 0.85em;
+	min-height: 2.5em;
+}
+
+.material-icons {
+	font-size: 24px;
+	font-family: 'Material Icons', 'Material Icons';
+	.mat-badge-content {
+		font-family: 'Roboto';
+	}
+}
+
+// Custom
+//// Handle buttons appropriately, with respect to line-height
+.mat-raised-button,
+.mat-stroked-button,
+.mat-flat-button {
+	padding: 0 1.15em;
+	margin: 0 0.65em;
+	min-width: 3em;
+	line-height: 36.4px;
+}
+
+.mat-standard-chip {
+	padding: 0.5em 0.85em;
+	min-height: 2.5em;
+}
+
+.material-icons {
+	font-size: 24px;
+	font-family: 'Material Icons', 'Material Icons';
+	.mat-badge-content {
+		font-family: 'Roboto';
+	}
+}
+
+mat-icon {
+	vertical-align: middle;
+}
+
+.mat-form-field {
+	margin-bottom: 0.5rem;
+}
+
+.mat-form-field-wrapper {
+	margin-bottom: -1.25em;
+}
+
+.mat-sidenav {
+	.mat-nav-list {
+		padding: 0 !important;
+
+		.mat-list-item-content {
+			padding: 0 !important;
+
+			.mat-list-text {
+				height: 100%;
+
+				.mat-line {
+					padding-left: 1rem;
+					height: 100%;
+					display: flex;
+					align-items: center;
+				}
+			}
+		}
+	}
+
+	.mat-expansion-panel-body {
+		padding: 0;
+	}
+
+	.mat-expansion-panel {
+		border-radius: 0 !important;
+	}
+
+	.mat-expansion-panel-header {
+		height: 3rem !important;
+
+		.mat-expanded {
+			height: 3rem !important;
+		}
+	}
+}
+.mat-list-base {
+	padding: 0 !important;
+}
+
+.mat-menu-panel {
+	max-width: unset !important;
+}
+
+.mat-tab-link {
+	height: auto !important;
+}
+
+.darkMode {
+	.bp-custom-color .mat-accent.mat-button-disabled {
+		color: #444444 !important;
+		background-color: rgba(250, 250, 250, 0.42) !important;
+	}
+}
+
+.mat-drawer-container {
+	height: 100vh;
+}
+
+.mat-dialog-container {
+	background: transparent !important;
+}
+
+.mat-tab-header {
+	border-color: transparent !important;
+}
+
+.mat-drawer-backdrop.mat-drawer-shown {
+	background-color: rgba(30, 30, 30, 0.7);
+}
 
 .mat-snack-bar-container {
 	display: flex !important;
@@ -15,7 +154,22 @@
 	box-shadow: none !important;
 }
 
-.mat-step-label {
-	display: block;
-	width: 100%;
+.mat-tab-link-container {
+	padding: 5px;
+}
+
+.mat-tab-link-container .mat-tab-link {
+	height: 40px !important;
+}
+
+.mat-tab-link-container .mat-ink-bar {
+	background-color: white !important;
+	height: 1px !important;
+	opacity: 0.3 !important;
+	box-shadow: 0px 0px 5px 1px white;
+}
+
+.mat-expansion-panel {
+	background-color: transparent !important;
+	box-shadow: none !important;
 }
