--- a/apps/crane-web-client/src/styles/material.scss
+++ b/apps/crane-web-client/src/styles/material.scss
@@ -173,3 +173,7 @@ mat-icon {
 	background-color: transparent !important;
 	box-shadow: none !important;
 }
+
+.mat-form-field-appearance-fill .mat-form-field-flex {
+	background-color: rgba(0, 0, 0, 0.4) !important;
+}
