refactor(core): name properly wood bg

--- a/apps/bulldozer-client/src/styles/core/backgrounds.scss
+++ b/apps/bulldozer-client/src/styles/core/backgrounds.scss
@@ -4,47 +4,47 @@
 .bd-bg-stone-2,
 .bd-bg-stone,
 .bd-bg-bulldozer {
-  background-size: cover;
+	background-size: cover;
 }
 
-.bd-bg-wood,
+.bp-bg-wood,
 .bd-bg-bricks,
 .bd-bg-metal {
-  background-repeat: repeat !important;
+	background-repeat: repeat !important;
 }
 
 .bd-bg-metal {
-  background-image: url('../../assets/images/backgrounds/metal.png');
+	background-image: url('../../assets/images/backgrounds/metal.png');
 }
 
 .bd-bg-metal-2 {
-  background-image: url('../../assets/images/backgrounds/metal-2.webp');
+	background-image: url('../../assets/images/backgrounds/metal-2.webp');
 }
 
 .bd-bg-bricks {
-  background-image: url('../../assets/images/backgrounds/bricks.webp');
+	background-image: url('../../assets/images/backgrounds/bricks.webp');
 }
 
-.bd-bg-wood {
-  background-image: url('../../assets/images/backgrounds/wood.webp');
+.bp-bg-wood {
+	background-image: url('../../assets/images/backgrounds/wood.webp');
 }
 
 .bd-bg-stone {
-  background-image: url('../../assets/images/backgrounds/sidebar.webp');
+	background-image: url('../../assets/images/backgrounds/sidebar.webp');
 }
 
 .bd-bg-stone-2 {
-  background-image: url('../../assets/images/backgrounds/list_element.webp');
+	background-image: url('../../assets/images/backgrounds/list_element.webp');
 }
 
 .bd-bg-stone-3 {
-  background-image: url('../../assets/images/backgrounds/tabs.png');
+	background-image: url('../../assets/images/backgrounds/tabs.png');
 }
 
 .bd-bg-bulldozer {
-  background-image: url('../../assets/images/backgrounds/bulldozer.webp');
+	background-image: url('../../assets/images/backgrounds/bulldozer.webp');
 }
 
 .bd-bg-image-8 {
-  background-image: url('../../assets/images/backgrounds/wood_sign.webp');
+	background-image: url('../../assets/images/backgrounds/wood_sign.webp');
 }
